fix height for loading path. Also, fix overlow and line wrap.
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@17702 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_profiles.scss
+++ b/src/main/resources/scss/_profiles.scss
@@ -504,6 +504,10 @@
 				text-transform: uppercase;
 				padding: 0 20px;
 				font: normal 700 10px/40px $font;
+				min-height: 40px;
+				white-space: nowrap;
+				overflow: hidden;
+				text-overflow: ellipsis;
 
 				span.path-part {
 					&::after{
